--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
+  <script src="https://kit.fontawesome.com/11c16ce0fe.js" crossorigin="anonymous"></script>
+
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
